--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "hasseDiagram"]
+	path = hasseDiagram
+	url = https://github.com/kciomek/hassediagram
+	shallow = true
+	registered = true
